--- a/data.html
+++ b/data.html
@@ -96,5 +96,26 @@
       </div>
     </div>
   </section>
+  <footer class="footer">
+  <div class="content has-text-centered">
+<p>Copyright (c) booklove <script>document.write(new Date().toLocaleDateString());</script>
+
+<noscript>
+  <p>2024-current
+</noscript>
+
+</p>
+<p>
+View 
+      <a href="https://getbooklove.app/tos">Terms of Service</a> and
+      <a href="https://getbooklove.app/privacy">Privacy Policy</a>.
+    </p>
+    <p>
+      <a href="https://bulma.io">Bulma</a> by Jeremy Thomas, licensed
+      <a href="https://opensource.org/licenses/MIT">MIT</a>.
+      </p>
+      
+  </div>
+</footer>
 </body>
 </html>​​​​​​​​​​​​​​​​
