--- a/data.html
+++ b/data.html
@@ -12,6 +12,10 @@
       <h1 class="title">Your Data on Booklove</h1>
       <div class="subtitle">This data is collected and stored by Booklove to provide our service to you.</div>
 
+<div class="notification is-warning">
+
+Please only share your data and this page with people you trust. The link to this page will work for up to 30 minutes after first activation.
+</div>
       <div class="box">
         <h5 class="title is-5">Your Profile Information</h5>
         <div><strong>Apple ID String:</strong> {{user.apple_id}}</div>
@@ -98,7 +102,7 @@
   </section>
   <footer class="footer">
   <div class="content has-text-centered">
-<p>Copyright (c) booklove <script>document.write(new Date().toLocaleDateString());</script>
+<p>Copyright (c) booklove <script>document.write(new Date().getFullYear());</script>
 
 <noscript>
   <p>2024-current
